--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "gulp-concat": "^2.6.1",
     "gulp-cssmin": "^0.2.0",
     "gulp-imagemin": "^7.1.0",
-    "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.1.0",
     "gulp-uglify-es": "^2.0.0",
+    "ion-rangeslider": "^2.3.1",
     "jquery": "^3.5.1",
     "mixitup": "^3.3.1",
     "normalize.css": "^8.0.1",
